--- a/style.css
+++ b/style.css
@@ -5,5 +5,30 @@
     margin-left: 1rem;
 }
 .card {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
+.homePageCont {
+    margin-top: 1rem;
+}
+.closer {
+    margin-bottom: 0;
+}
+
+#pageContainer {
+  position: relative;
+  min-height: 100vh;
+}
+
+#contentContainer {
+  padding-bottom: 7rem;  
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+/* .mountainCards {
+    width: 500px;
+    height: 200px
+} */
